--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
-
 h1 {
     text-align: center;
 }
 
-table {
+.tableCompleta {
     width: 90%;
-    border-collapse: collapse; 
+    border-collapse: collapse;
     margin: 0 auto;
 }
 
-th, td {
+th{
     border: 1px solid #000;
     padding: 8px;
     text-align: center;
@@ -23,3 +22,22 @@ tr:hover {
     background-color: #ddd;
 }
 
+input {
+    width: 35%;
+}
+
+.inputDate {
+    width: 55%;
+}
+
+td {
+    padding: 2px;
+    border: 1px solid #000;
+    text-align: center;
+}
+
+.tableResume {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 0 auto;
+}
