--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
+body{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 h1 {
     text-align: center;
+}
+
+h3 {
+    margin-left: 5%;
 }
 
 .tableCompleta {
@@ -8,9 +16,21 @@ h1 {
     margin: 0 auto;
 }
 
+.tableResume {
+    width: 50%;
+    border-collapse: collapse;
+    margin-left: 5%;
+}
+
 th{
     border: 1px solid #000;
     padding: 8px;
+    text-align: center;
+}
+
+td {
+    padding: 2px;
+    border: 1px solid #000;
     text-align: center;
 }
 
@@ -28,16 +48,4 @@ input {
 
 .inputDate {
     width: 55%;
-}
-
-td {
-    padding: 2px;
-    border: 1px solid #000;
-    text-align: center;
-}
-
-.tableResume {
-    width: 50%;
-    border-collapse: collapse;
-    margin: 0 auto;
 }
